welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value getCoulorSol
getCoulorSol();
^SlugTracking:6: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
return Color.green
             ^